2007-11-07  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_finalize): deinit crypto bits
		- (nma_constructor): init crypto bits

2007-11-07  Dan Williams  <dcbw@redhat.com>

	* src/utils/crypto.h
	  src/utils/crypto.c
		- Fix linkage of nm_crypto_error_quark() by moving implementation to
			the .c file
		- Provide an enum for NM_CRYPTO_KEY_TYPE_*
		- (decrypt_key): avoid possible memory leak

	* src/utils/crypto_nss.c
	  src/utils/crypto_gnutls.c
		- (crypto_decrypt): don't overrun the buffer on error

2007-11-07  Dan Williams  <dcbw@redhat.com>

	* src/utils/crypto.c
	  src/utils/crypto_gnutls.c
	  src/utils/crypto_nss.c
		- Make an effort not to leak key material after errors

2007-11-07  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
	  src/gconf-helpers/gconf-upgrade.c
		- (nm_gconf_migrate_0_7_vpn_connections, nm_gconf_get_all_connections):
			update the service_type key name to service-type due to NMSetting
			changes

2007-11-07  Dan Williams  <dcbw@redhat.com>

	* src/applet.glade
		- Add a generic alert dialog

	* src/wireless-dialog.h
	  src/wireless-dialog.c
	  	- (security_combo_init): pass the connection along to the security
	  		methods so they can do things like set defaults
	  	- (nma_wireless_dialog_nag_user): if the user didn't enter something
	  		they should really have (like a CA certificate) but we still want
	  		to allow the connection to proceed, add a mechanism for querying the
	  		WirelessSecurity and EAPMethods whether the user should be gently
	  		alerted to that fact

	* src/wireless-security/ws-wep-passphrase.h
	  src/wireless-security/ws-wep-passphrase.c
	  src/wireless-security/ws-leap.h
	  src/wireless-security/ws-leap.c
	  src/wireless-security/ws-wep-key.h
	  src/wireless-security/ws-wep-key.c
	  src/wireless-security/ws-wpa-psk.h
	  src/wireless-security/ws-wpa-psk.c
	  src/wireless-security/ws-dynamic-wep.h
	  src/wireless-security/ws-dynamic-wep.c